--- a/src/styles/global/theme.css
+++ b/src/styles/global/theme.css
@@ -1,66 +1,61 @@
 @layer theme {
+  :root {
+    --brand-green: oklch(50.7% 0.238 131.355);
+    --brand-blue: oklch(50.7% 0.238 264.51);
+
+    --round-1: 4px;
+    --round-2: 8px;
+
+    --space-1: 0.4rem;
+    --space-2: 0.7rem;
+    --space-3: 1rem;
+    --space-4: 1.3rem;
+  }
   :root[data-theme="dark"] {
     color-scheme: dark;
 
-    --col-fg: #c5c5c9;
-    --col-fg-active: #ffffff;
-    --col-fg-fade-1: #a1a1a5;
-    --col-fg-fade-2: #7e7e81;
-    --col-fg-fade-3: #49494b;
-    --col-bg: #0b0b0d;
-    --col-bg-fade-1: #151517;
-    --col-bg-fade-2: #29292b;
+    --fg-1: oklch(84% 0.02 255);
+    --fg-2: oklch(70% 0.03 255);
+    --fg-3: oklch(56% 0.04 255);
 
-    --col-link-fg: var(--col-brand-2);
-    --col-link-fg-visit: var(--col-brand-2-light);
-    --col-link-bg: #24233a;
-    --col-link-shadow: #dedee0b3;
+    --bg-4: oklch(48% 0.06 255);
+    --bg-3: oklch(32% 0.04 255);
+    --bg-2: oklch(24% 0.03 255);
+    --bg-1: oklch(16% 0.02 255);
 
-    --col-brand-1: #8ec73d;
-    --col-brand-2: #1d93e7;
-    --col-brand-2-light: #36b1ed;
+    --darkest: var(--bg-2);
+    --lightest: var(--fg-1);
+    --darkish: var(--bg-2);
+    --lightish: var(--fg-3);
 
-    --radius-1: 4px;
-    --space-section-1: 1.2rem;
-    --space-section-2: 1.5rem;
-    --space-section-3: 1.8rem;
-    --space-comp-1: 0.4rem;
-    --space-comp-2: 0.7rem;
-    --space-comp-3: 1rem;
-    --space-comp-4: 1.3rem;
+    --link: oklch(60% 0.3 260);
+    --link-visit: oklch(40% 0.2 255);
+    --link-box: oklch(24% 0.1 245);
 
-    --page-bg: radial-gradient(var(--col-bg-fade-1) 0%, var(--col-bg) 100%);
+    --canvas: radial-gradient(var(--bg-2), var(--bg-1));
   }
 
   :root[data-theme="light"] {
     color-scheme: light;
 
-    --col-fg: #0b0b0d;
-    --col-fg-active: #000;
-    --col-fg-fade-1: #29292b;
-    --col-fg-fade-2: #474749;
-    --col-fg-fade-3: #a1a1a3;
-    --col-bg: #fff;
-    --col-bg-fade-1: #d3d3d5;
-    --col-bg-fade-2: #b4b4b6;
+    --fg-1: oklch(16% 0.04 255);
+    --fg-2: oklch(30% 0.08 255);
+    --fg-3: oklch(44% 0.12 255);
 
-    --col-link-fg: #1a4cff;
-    --col-link-fg-visit: #0f2dd2;
-    --col-link-bg: #b9d2e7;
-    --col-link-shadow: transparent;
+    --bg-4: oklch(76% 0.12 255);
+    --bg-3: oklch(86% 0.08 255);
+    --bg-2: oklch(91% 0.06 255);
+    --bg-1: oklch(96% 0.04 255);
 
-    --col-brand-1: #56da2b;
-    --col-brand-2: #0a46fa;
+    --darkest: var(--fg-2);
+    --lightest: var(--bg-1);
+    --darkish: var(--bg-3);
+    --lightish: var(--bg-2);
 
-    --radius-1: 4px;
-    --space-section-1: 1.2rem;
-    --space-section-2: 1.5rem;
-    --space-section-3: 1.8rem;
-    --space-comp-1: 0.4rem;
-    --space-comp-2: 0.7rem;
-    --space-comp-3: 1rem;
-    --space-comp-4: 1.3rem;
+    --link: oklch(40% 0.3 260);
+    --link-visit: oklch(60% 0.2 255);
+    --link-box: oklch(86% 0.1 245);
 
-    --page-bg: radial-gradient(var(--col-bg) 50%, var(--col-bg-fade-1) 100%);
+    --canvas: unset;
   }
 }
