--- a/src/styles/global/font.css
+++ b/src/styles/global/font.css
@@ -13,12 +13,6 @@
       "DejaVu Sans Mono", monospace;
   }
 
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6,
   address,
   blockquote,
   dl,
@@ -26,8 +20,16 @@
   p,
   pre,
   table,
-  ul {
+  ul,
+  hr {
     margin-bottom: 1rem;
+  }
+
+  h1,
+  h2,
+  h3 {
+    line-height: 1;
+    margin-bottom: 0.4rem;
   }
 
   h6 {
@@ -35,18 +37,21 @@
     font-weight: 300;
     font-style: italic;
     line-height: 1.4;
+    margin-bottom: 0.7rem;
   }
 
   h5 {
     font-size: 1.1rem;
     font-weight: 300;
     line-height: 1.3;
+    margin-bottom: 0.6rem;
   }
 
   h4 {
     font-size: 1.4rem;
     font-weight: 300;
     line-height: 1.2;
+    margin-bottom: 0.5rem;
   }
 
   h2,
@@ -67,6 +72,5 @@
   h1 {
     font-size: 2.3rem;
     font-weight: 500;
-    line-height: 1;
   }
 }
