Make chain nav a footer

--- a/src/pages/[page].astro
+++ b/src/pages/[page].astro
@@ -20,8 +20,13 @@ const next = nextRef && (await pageToLink(nextRef));
 ---
 
 <Layout {title} {description}>
-  <h1>{title}</h1>
-  <Content />
-  <hr />
-  <ChainNavigation {title} {previous} {next} />
+  <main>
+    <h1>{title}</h1>
+    <Content />
+    <br />
+  </main>
+  <footer>
+    <hr />
+    <ChainNavigation class="page-chain-nav" {title} {previous} {next} />
+  </footer>
 </Layout>
