Style rendered page

--- a/src/styles/layouts.css
+++ b/src/styles/layouts.css
@@ -1,4 +1,18 @@
 .page {
   max-width: 50rem;
   margin: 0 auto;
+  padding: 1rem 1rem;
+}
+
+.page footer {
+  position: sticky;
+  top: 100vh;
+}
+
+.page-chain-nav {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: baseline;
+  line-height: 1;
 }
