Move main element to layout

--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -8,5 +8,7 @@ const { title, description } = Astro.props;
 ---
 
 <Base class="page" {title} {description}>
-  <slot />
+  <main>
+    <slot />
+  </main>
 </Base>
