Rework style organization

--- a/src/modules/Style.astro
+++ b/src/modules/Style.astro
@@ -1,10 +1,10 @@
 ---
-import "$style/global/reset.css";
-import "$style/global/theme.css";
-import "$style/global/font.css";
-import "$style/global/base.css";
-import "$style/layouts.css";
-import "$style/modules.css";
+import "$style/reset.css";
+import "$style/theme.css";
+import "$style/font.css";
+import "$style/base.css";
+import "$style/layout.css";
+import "$style/appearance.css";
 ---
 
 <script is:inline>
