Create global header stub

--- a/src/modules/HeaderGlobal.astro
+++ b/src/modules/HeaderGlobal.astro
@@ -1,3 +1,11 @@
-<header class="header">
-  <a class="header-title" href="/"><h2>@thegatesdev</h2></a>
+<header class="header-global">
+  <div>
+    <a class="header-title" href="/"><h2>@thegatesdev</h2></a>
+  </div>
+  <div>
+
+  </div>
+  <div>
+
+  </div>
 </header>
