--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -1,4 +1,12 @@
 @layer layout {
+  .header-global {
+    padding: var(--space-1) var(--space-2);
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: var(--space-2);
+  }
   .page {
     max-width: 50rem;
     margin: 0 auto;
