--- a/src/pages/[...page].astro
+++ b/src/pages/[...page].astro
@@ -17,6 +17,8 @@ const { Content } = await render(page);
 ---
 
 <Layout {title} {description}>
-  <h1>{title}</h1>
-  <Content />
+  <main class="content-page">
+    <h1>{title}</h1>
+    <Content />
+  </main>
 </Layout>
