--- a/src/modules/Style.astro
+++ b/src/modules/Style.astro
@@ -5,6 +5,7 @@ import "$style/font.css";
 import "$style/base.css";
 import "$style/layout.css";
 import "$style/appearance.css";
+import "$style/util.css";
 ---
 
 <script is:inline>
