--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -16,7 +16,7 @@
   a {
     color: var(--link);
     display: inline-block;
-    text-decoration-style: dotted;
+    text-decoration: var(--decorate, underline dotted);
   }
 
   a:visited {
