Add stub links to global navigation

--- a/src/modules/NavGlobal.astro
+++ b/src/modules/NavGlobal.astro
@@ -3,7 +3,9 @@ import LinkNavigation from "./LinkNavigation.astro";
 ---
 
 <ul class="nav-global" role="list">
-  <LinkNavigation href="#">Posts</LinkNavigation>
-  <LinkNavigation href="#">Test 1</LinkNavigation>
-  <LinkNavigation href="#">A very long link</LinkNavigation>
+  <LinkNavigation href="#">About Me</LinkNavigation>
+  <LinkNavigation href="#">Profiles</LinkNavigation>
+  <LinkNavigation href="#">Trivia</LinkNavigation>
+  <LinkNavigation href="#">Posts &#128464;</LinkNavigation>
+  <LinkNavigation href="#">Gallery &#128464;</LinkNavigation>
 </ul>
