--- a/src/modules/LinksGlobal.astro
+++ b/src/modules/LinksGlobal.astro
@@ -1,5 +1,13 @@
+---
+import IconGithub from '$icon/github.svg';
+import IconYouTube from '$icon/youtube.svg';
+---
+
 <ul class="links-global" role="list">
-  <li>Test</li>
-  <li>Test</li>
-  <li>Test</li>
+  <li>
+    <a href="#"><IconGithub /></a>
+  </li>
+  <li>
+    <a href="#"><IconYouTube /></a>
+  </li>
 </ul>
