--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -24,9 +24,14 @@
   }
 
   .nav-global a,
-  .links-global li,
   .header-global-title {
     align-content: center;
+  }
+
+  .links-global {
+    display: flex;
+    flex-direction: row;
+    gap: var(--space-2);
   }
 
   .page,
