Fill global links and nav with links

--- a/src/modules/LinksGlobal.astro
+++ b/src/modules/LinksGlobal.astro
@@ -5,9 +5,9 @@ import IconYouTube from '$icon/youtube.svg';
 
 <ul class="links-global" role="list">
   <li>
-    <a href="#"><IconGithub /></a>
+    <a href="https://github.com/thegatesdev"><IconGithub /></a>
   </li>
   <li>
-    <a href="#"><IconYouTube /></a>
+    <a href="https://www.youtube.com/@thegatesdev"><IconYouTube /></a>
   </li>
 </ul>
