--- a/src/modules/NavGlobal.astro
+++ b/src/modules/NavGlobal.astro
@@ -3,9 +3,9 @@ import LinkNavigation from "./LinkNavigation.astro";
 ---
 
 <ul class="nav-global" role="list">
-  <LinkNavigation href="#">About Me</LinkNavigation>
-  <LinkNavigation href="#">Profiles</LinkNavigation>
-  <LinkNavigation href="#">Trivia</LinkNavigation>
-  <LinkNavigation href="#">Posts &#128464;</LinkNavigation>
-  <LinkNavigation href="#">Gallery &#128464;</LinkNavigation>
+  <LinkNavigation href="/me">About Me</LinkNavigation>
+  <LinkNavigation href="/profiles">Profiles</LinkNavigation>
+  <LinkNavigation href="/trivia">Trivia</LinkNavigation>
+  <LinkNavigation href="/">Posts &#128464;</LinkNavigation>
+  <LinkNavigation href="/">Gallery &#128464;</LinkNavigation>
 </ul>
